babl-cache: implement a better cache path on Win32

Use SHGetFolderPathA() to get the user local data path
(the same path GEGL uses for plugins on Win32)

https://bugzilla.gnome.org/show_bug.cgi?id=774491